--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bleno": "^0.2.1",
     "chalk": "^1.1.1",
     "cylon": "^1.2.0",
+    "cylon-api-http": "^0.4.0",
     "cylon-bb8": "git+https://github.com/mcgrews3/cylon-bb8.git",
     "cylon-ble": "^0.8.0",
     "hybridgroup-spheron": "^0.3.0",
